  - apply Unicode normalization to case-insensitive filter expressions
  - stickers on playlists and some tag types
  - new commands "stickernames" and "playlistlength"
  - new "search"/"find" filter "added-since"
  - allow range in listplaylist and listplaylistinfo
  - "sticker find" supports sort and window parameter and new sticker compare operators "eq", "lt" and "gt"
* database
  - attribute "added" shows when each song was added to the database
  - fix integer overflows with 64-bit inode numbers
  - proxy: require MPD 0.21 or later
  - proxy: require libmpdclient 2.15 or later
* archive
  - add option to disable archive plugins in mpd.conf
* storage
  - curl: optimize database update
* input
  - alsa: limit ALSA buffer time to 2 seconds
  - curl: add "connect_timeout" configuration
* decoder
  - ffmpeg: require FFmpeg 4.0 or later
  - ffmpeg: query supported demuxers at runtime
  - hybrid_dsd: remove
  - opus: implement bitrate calculation
  - sidplay: require libsidplayfp (drop support for the original sidplay)
  - wavpack: require libwavpack version 5
* resampler
  - soxr: require libsoxr 0.1.2 or later
* player
  - add option "mixramp_analyzer" to scan MixRamp tags on-the-fly
  - "one-shot" consume mode
* tags
  - new tags "TitleSort", "Mood"
* output
  - add option "always_off"
  - alsa: require alsa-lib 1.1 or later
  - pipewire: map tags "Date" and "Comment"
* switch to C++20
  - GCC 10 or clang 11 (or newer) recommended
* static partition configuration
* Windows
  - build with libsamplerate
  - remove JACK DLL support
* remove Haiku support
* remove Boost dependency
* require libfmt 7 or later
* documentation: switch to sphinx-rtd-theme

ver 0.23.15 (2023/12/20)
* decoder
  - ffmpeg: fix build failure with FFmpeg 6.1
* output
  - alsa: limit buffer time to 2 seconds

ver 0.23.14 (2023/10/08)
* decoder
  - flac: fix scanning files with non-ASCII names on Windows
  - mad: fix calculation of LAME peak values
* mixer
  - wasapi: fix problem setting volume